# proof-estate

./: .gitignore  BLOCKCHAIN_TESTING_GUIDE.md  Backend Build Stability.md  Backend Seeding and Routes.md  DATABASE_ACCESS.md  DEVELOPMENT.md  FIXES_APPLIED.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_LOG.md  README.md  README_DATABASE.md  REAL_TIME_DATA.md  SolEstate_ Comprehensive Market Validation Report — India Real Estate Tokenization on Solana (1).docx  TESTING_ASSETS.md  UI Polish and Rebranding.md  Writing Comprehensive Test Cases.md  docker-compose.yml  inspect_database.js  package.json  read_docx.py  replace_colors.js  retheme.js  retheme_light.js  run-blockchain-tests.bat  run-blockchain-tests.sh  seed_real_data.js  setup-solana-dev.ps1
backend/: .env.example  Cargo.toml  Dockerfile  error.txt
backend/migrations/: 001_init.sql
backend/src/: main.rs  real_time_endpoints.rs  solana_service.rs
backend/test-ledger/: faucet-keypair.json  genesis.tar.bz2  stake-account-keypair.json  tower-1_9-5FsBUuRz4gZ8CJwboCWZb3WLHYj3XY8vuykfnE3PnBt.bin.new  validator-keypair.json  vote-account-keypair.json
backend/test-ledger/rocksdb/: 000056.sst  000057.sst  000058.sst  000059.sst  000060.sst  000061.sst  IDENTITY  LOG  LOG.old.1772773138755800  MANIFEST-000063  OPTIONS-000069  OPTIONS-000071
backend/tests/: api_tests.rs
contracts/: Anchor.toml  package-lock.json  package.json  tsconfig.json
contracts/programs/proof_estate/: Cargo.toml
contracts/programs/proof_estate/src/: lib.rs
frontend/: jest.config.js  jest.polyfills.js  jest.setup.ts  next.config.ts  (+4 more)
(+43 files in other folders)
