[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["multipart"] }
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5.2", features = ["cors"] }
sqlx = { version = "0.6.3", default-features = false, features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono"] }
uuid = { version = "1.3.0", features = ["v4", "serde"] }
chrono = { version = "0.4.24", features = ["serde"] }
solana-program = "1.18.26"
hex = "0.4.3"
sha2 = "0.10"
dotenvy = "0.15.7"
solana-client = "1.18.26"
solana-sdk = "1.18.26"
bs58 = "0.5.1"
anchor-client = "0.30.1"
anchor-lang = "0.30.1"
anyhow = "1.0"
